--- a/badger/templates/badger/award_detail.html
+++ b/badger/templates/badger/award_detail.html
@@ -10,15 +10,15 @@
 {% endblock %}
 
 {% block content %}
-<section class="row-fluid">
-    <section class="span4">
+<section class="row">
+    <section class="col-md-4">
         <header class="page-header">  
             <h2>Badge: </h3>
         </header>
         {% include "badger/includes/badge_full.html" %}
     </section>
 
-    <section class="award span8">
+    <section class="award col-md-8">
         <header class="page-header">
             <h2>Award detail</h2>
         </header>
