--- a/badger/templates/badger/badge_edit.html
+++ b/badger/templates/badger/badge_edit.html
@@ -86,7 +86,7 @@
                   {{ form.nominations_autoapproved }}
                   <p class="help">{{ form.nominations_autoapproved.help_text }}</p>
                 </li>
-            <li><input type="submit" class="btn btn-large btn-primary submit" value="{{ _("Save badge") }}"></li>
+            <li><input type="submit" class="btn btn-lg btn-primary submit" value="{{ _("Save badge") }}"></li>
         </ul>
     </form>
 </section>
