--- a/badger/templates/badger/claims_list.html
+++ b/badger/templates/badger/claims_list.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block content %}
-<section class="row-fluid">
+<section class="row">
 
-    <section class="span12">
+    <section class="col-md-12">
         <header class="page-header">
             <h2>{{ _("Claim codes for {badge}") | f(badge=badge) }}</h2>
         </header>
