--- a/badger/templates/badger/staff_tools.html
+++ b/badger/templates/badger/staff_tools.html
@@ -15,7 +15,7 @@
         <input type="hidden" name="is_grant" value="1" />
         <ul>
             {{ grant_form.as_ul }}
-            <li><input type="submit" class="btn btn-large btn-primary submit" value="{{ _("Grant badge claims") }}"></li>
+            <li><input type="submit" class="btn btn-lg btn-primary submit" value="{{ _("Grant badge claims") }}"></li>
         </ul>
     </form>
 </section>
