--- a/badger/templates/badger/badge_award.html
+++ b/badger/templates/badger/badge_award.html
@@ -8,15 +8,15 @@
 {% endblock %}
 
 {% block content %}
-<section class="row-fluid">
-    <section class="span4">
+<section class="row">
+    <section class="col-md-4">
         <header class="page-header">
             <h2>Badge: {{ badge_title }}</h2>
         </header>
         {% include "badger/includes/badge_full.html" %}
     </section>
 
-    <section class="span8">
+    <section class="col-md-8">
         <header class="page-header">
             <h2>Award a Badge</h2>
         </header>
