--- a/badger/templates/badger/badge_create.html
+++ b/badger/templates/badger/badge_create.html
@@ -20,6 +20,7 @@
     <header>
         <h2>Create a badge</h2>
     </header>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <form id="create_badge" method="POST" action="" enctype="multipart/form-data">
         {% csrf_token %}
         <ul>
@@ -33,7 +34,7 @@
                   {{ form.image }}
                   <p class="help">{{ form.image.help_text }}</p>
                 </li>
-                <li>
+                <li class="col-xs-12">
                   <label for="id_description">Description: </label><br />
                   {{ form.description }}
                   <p class="help">{{ form.description.help_text }}</p>
@@ -82,5 +83,6 @@
             <li><input type="submit" class="submit" value="Create badge"></li>
         </ul>
     </form>
+    </div>
 </section>
 {% endblock %}
