--- a/badger/templates/badger/claim_deferred_award.html
+++ b/badger/templates/badger/claim_deferred_award.html
@@ -7,14 +7,14 @@
 
 {% block content %}
 
-    <section class="span4" id="detail">
+    <section class="col-md-4" id="detail">
         <header class="page-header">
             <h2>Badge: {{badge.title}}</h2>
         </header>
         {% include "badger/includes/badge_full.html" %}
     </section>
 
-    <section class="span8">
+    <section class="col-md-8">
     
         <header class="page-header">
             <h2>{{ _("Award Claim") }}</h2>
@@ -48,7 +48,7 @@
             {% else %}
                 <p>{{ _("You can claim this award for yourself") }}</p>
             {% endif %}
-            <input type="submit" class="btn btn-large btn-primary submit" value="{{ _("Claim this award") }}">
+            <input type="submit" class="btn btn-lg btn-primary submit" value="{{ _("Claim this award") }}">
         </form>
         {% endif %}
 
