--- a/badger/templates/badger/base.html
+++ b/badger/templates/badger/base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block nav2 %} 
-    <ul class="nav nav-pills" id="actions">
+    <ul class="nav nav-pills nav2" id="actions">
        <li><a href="/badger">Home</a></li>
        <li><a href="/badger/awards/feed">Awards Feed</a></li>
        {% if perms.badger.add_badge %}
