Change button styles in Badger to Bootstrap style

--- a/badger/templates/badger/badge_create.html
+++ b/badger/templates/badger/badge_create.html
@@ -80,7 +80,7 @@
                   {{ form.nominations_autoapproved }}
                   <p class="help">{{ form.nominations_autoapproved.help_text }}</p>
                 </li>
-            <li><input type="submit" class="submit" value="Create badge"></li>
+            <li><input type="submit" class="submit btn btn-primary" value="Create badge"></li>
         </ul>
     </form>
     </div>
