--- a/badger_example/templates/badger/badge_create.html
+++ b/badger_example/templates/badger/badge_create.html
@@ -11,7 +11,7 @@
         {{ csrf }}
         <ul>
             {{ form.as_ul }}
-            <li><input type="submit" class="submit" value="Create badge"></li>
+            <li><input type="submit" class="submit" class="btn btn-primary" value="Create badge"></li>
         </ul>
     </form>
 </section>
