Change button style for the Award button to Bootstrap style

--- a/badger/templates/badger/badge_award.html
+++ b/badger/templates/badger/badge_award.html
@@ -25,7 +25,7 @@
             <div class="ui-widget" name="combobox">
             <ul>
                 {{ form.as_ul }}
-                <li><input type="submit" class="submit" value="Award"></li>
+                <li><input type="submit" class="submit btn btn-success" value="Award"></li>
             </ul>
             </div>
         </form>
