--- a/badger/templates/badger/base.html
+++ b/badger/templates/badger/base.html
@@ -4,7 +4,7 @@
     <ul class="nav nav-pills nav2" id="actions">
        <li><a href="/badger">Home</a></li>
        <li><a href="/badger/awards/feed">Awards Feed</a></li>
-       {% if perms.badger.add_badge %}
+       {% if perms.badger.can_add_badge %}
         <li><a href="/badger/create">Create a Badge</a></li>
        {% endif %}
        <li><a href="/badger/you">Your Badges</a></li>
