At least the buttons will be in one line when using computer browser

--- a/badger/static/css/badger-badge-full.less
+++ b/badger/static/css/badger-badge-full.less
@@ -8,11 +8,12 @@
 	color: black;
 	display: block;
 	border-radius: 15px;
+        max-width:550px
 }
 
 #container {
 	display: block;
-	max-width: 450px;
+	max-width: 550px;
 	background-color: @backgroundColor;
 	div.image, img {
 		margin-left: auto;
@@ -48,6 +49,7 @@ dt {
 	li {
  	      	display: inline;
         	margin: 5px;
+                margin-top:15px;
 	}	
 }
 
