--- a/badger/templates/badger/awards_by_badge.html
+++ b/badger/templates/badger/awards_by_badge.html
@@ -5,7 +5,7 @@
 {% block extrahead %}
     <link rel="alternate" type="application/atom+xml"
         title="{% trans'Recent awards' %}"
-        href="{% url badger.feeds.awards_by_badge 'atom' badge.slug %}" />
+        href="{% url 'badger.feeds.awards_by_badge' 'atom' badge.slug %}" />
 {% endblock %}
 
 {% block content %}
