--- a/badger/templates/badger/includes/badge_full.html
+++ b/badger/templates/badger/includes/badge_full.html
@@ -14,23 +14,23 @@
     {% endif %}
     <ul class="btn-list">
         {% if perms.badger.change_badge %}
-            <li><a class="btn btn-primary edit_badge" href="{% url badger.views.edit badge.slug  %}">{{ _('Edit') }}</a></li>
+            <li><a class="btn btn-primary edit_badge" href="{% url 'badger.views.edit' badge.slug  %}">{{ _('Edit') }}</a></li>
         {% endif %}
         {% if perms.badger.delete_badge %}
-            <li><a class="btn btn-danger delete_badge" href="{% url badger.views.delete badge.slug %}">{{ _('Delete') }}</a></li>
+            <li><a class="btn btn-danger delete_badge" href="{% url 'badger.views.delete' badge.slug %}">{{ _('Delete') }}</a></li>
         {% endif %}
         {% if not badge.retired %}
             {% if perms.badger.add_award %}
-                <li><a class="btn btn-success award_badge" href="{% url badger.views.award_badge badge.slug %}">{{ _('Award') }}</a></li>
+                <li><a class="btn btn-success award_badge" href="{% url 'badger.views.award_badge' badge.slug %}">{{ _('Award') }}</a></li>
             {% endif %}
             {% if perms.badger.add_nomination %}
-                <li><a class="btn btn-warning nominate_badge" href="{% url badger.views.nominate_for badge.slug %}">{{ _('Nominate') }}</a></li>
+                <li><a class="btn btn-warning nominate_badge" href="{% url 'badger.views.nominate_for' badge.slug %}">{{ _('Nominate') }}</a></li>
             {% endif %}
             {% if retire and perms.badger.delete_badge %}
-                <li><a class="btn btn-danger retire_badge" href="{% url badger.views.retire badge.slug %}">{{ _('Retire') }}</a></li>
+                <li><a class="btn btn-danger retire_badge" href="{% url 'badger.views.retire' badge.slug %}">{{ _('Retire') }}</a></li>
             {% endif %}
         {% elif perms.badger.delete_badge %}
-            <li><a class="btn btn-danger unretire_badge" href="{% url badger.views.unretire badge.slug %}">{{ _('Unretire') }}</a></li>
+            <li><a class="btn btn-danger unretire_badge" href="{% url 'badger.views.unretire' badge.slug %}">{{ _('Unretire') }}</a></li>
         {% endif %}
 
     </ul>
