--- a/badger/templates/badger/your_badges.html
+++ b/badger/templates/badger/your_badges.html
@@ -6,10 +6,10 @@
 {% block extrahead %}
     <link rel="alternate" type="application/atom+xml"
         title="{{ _('Recent awards') }}"
-        href="{% url badger.feeds.awards_by_badge 'atom' badge.slug %}" />
+        href="{% url 'badger.feeds.awards_by_badge' 'atom' badge.slug %}" />
     <link rel="alternate" type="application/json"
         title="{{badge}} (JSON)')"
-        href="{% url badger.detail_json badge.slug %}" />
+        href="{% url 'badger.detail_json' badge.slug %}" />
 {% endblock %}
 
 {% block content %}
