--- a/badger_example/templates/badger/award_detail.html
+++ b/badger_example/templates/badger/award_detail.html
@@ -6,7 +6,7 @@
 {% block extrahead %}
     <link rel="alternate" type="application/json"
         title="{{award}} (JSON)')"
-        href="{% url badger.award_detail_json badge.slug award.pk %}" />
+        href="{% url 'badger.award_detail_json' badge.slug award.pk %}" />
 {% endblock %}
 
 {% block content %}
